--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+      <head>
+<meta charset="utf-8" />
+             <title>Exemplo Doc. HTML5 + CSS</title>
+             <link type="text/css" rel="stylesheet" href="modelo.css" />
+             <!-- LINK EXTERNO, INSTRUÇÃO CSS.  -->
+      </head>
+      <body>
+      <h1>PARTE 01</h1>
+      <br>      
+      <h1>Esta página vamos trabalhar com uma sequência, de códigos em CSS, para perdonalizar a página index.html</h1> 
+      <h2>Esta página vamos trabalhar com uma sequência, de códigos em CSS, para perdonalizar a página index.html</h2>     
+      <hr>
+      <!-- TAG responsável por fazer uma linha. -->
+            
+      </body>
+</html>
