--- a/tags3.html
+++ b/tags3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="modelo.css" />
+    <link type="text/css" rel="stylesheet" href="modelo.css2" />
     <!-- LINK EXTERNO, INSTRUÇÃO CSS.  -->
     <title>Tags + CSS</title>
 </head>
@@ -11,6 +11,6 @@
     <!-- ############################ PARTE 05: ########################### -->
     <p>texto normal<p>
     <p id="abc">texto com Espaçamento EXTRA</p>
-    
+
 </body>
 </html>
