--- a/tags3.html
+++ b/tags3.html
@@ -11,6 +11,9 @@
     <!-- ############################ PARTE 14: ########################### -->
     <p>texto normal<p>
     <p id="abc">texto com Espaçamento EXTRA</p>
+    <hr>
+
+    <!-- ############################ PARTE 15: ########################### -->
 
 </body>
 </html>
