--- a/tags3.html
+++ b/tags3.html
@@ -14,6 +14,9 @@
     <hr>
 
     <!-- ############################ PARTE 15: ########################### -->
-
+    <p>Texto normal<p>
+    <p id="abcd">Texto com Espaçamento SUPER-EXTRA</p>
+    <hr> 
+    
 </body>
 </html>
