--- a/tags3.html
+++ b/tags3.html
@@ -8,15 +8,26 @@
     <title>Tags + CSS</title>
 </head>
 <body>
-    <!-- ############################ PARTE 14: ########################### -->
+    <!-- ############################ PARTE 14: Letter- Spacing ########################### -->
     <p>texto normal<p>
     <p id="abc">texto com Espaçamento EXTRA</p>
     <hr>
 
-    <!-- ############################ PARTE 15: ########################### -->
+    <!-- ############################ PARTE 15: word-Spacing ########################### -->
     <p>Texto normal<p>
     <p id="abcd">Texto com Espaçamento SUPER-EXTRA</p>
     <hr> 
-    
+    <!-- ############################ PARTE 16: Text-Aling ########################### -->
+    <p class="left">Texto com alinhamento LEFT.</p>
+    <p class="right">texto com alinhamento RIGHT.</p>
+    <p class="justify">Texto com alinhamento JUSTIFY.</p>
+    <p class="center">Texto com alinhamento CENTER.</p>
+    <!-- ############################ PARTE 17: Tex-Underline ########################### -->
+    <p class="underline">Texto com efeito UNDERLINE.</p>
+    <p class="overline">Texto com efeito OVERLINE.</p>
+    <p class="line-throuht">Texto com efeito LINE-THROUHT.</p>
+    <p><a href="index.html" title="Página Inicial">Página Inicial</a>
+  
+
 </body>
 </html>
