--- a/tags3.html
+++ b/tags3.html
@@ -25,7 +25,7 @@
     <!-- ############################ PARTE 17: Tex-Underline ########################### -->
     <p class="underline">Texto com efeito UNDERLINE.</p>
     <p class="overline">Texto com efeito OVERLINE.</p>
-    <p class="line-throuht">Texto com efeito LINE-THROUHT.</p>
+    <p class="line-throuh">Texto com efeito LINE-THROUHT.</p>
     <p><a href="index.html" title="Página Inicial">Página Inicial</a>
   
 
