--- a/tags3.html
+++ b/tags3.html
@@ -17,17 +17,23 @@
     <p>Texto normal<p>
     <p id="abcd">Texto com Espaçamento SUPER-EXTRA</p>
     <hr> 
+
     <!-- ############################ PARTE 16: Text-Aling ########################### -->
     <p class="left">Texto com alinhamento LEFT.</p>
     <p class="right">texto com alinhamento RIGHT.</p>
     <p class="justify">Texto com alinhamento JUSTIFY.</p>
     <p class="center">Texto com alinhamento CENTER.</p>
+
     <!-- ############################ PARTE 17: Tex-Underline ########################### -->
     <p class="underline">Texto com efeito UNDERLINE.</p>
     <p class="overline">Texto com efeito OVERLINE.</p>
     <p class="line-throuh">Texto com efeito LINE-THROUH.</p>
     <p><a href="index.html" title="Página Inicial">Página Inicial</a>
   
+    <!-- ############################ PARTE 18: Text- Tranform ########################### -->
+    <p class="primeiro-maiusculo">abc def ghi</p>
+    <p class="maiussculo">abc def ghi</p>
+    <p class="minusculo">abc def ghi</p>
 
 </body>
 </html>
