--- a/tags3.html
+++ b/tags3.html
@@ -31,9 +31,8 @@
     <p><a href="index.html" title="Página Inicial">Página Inicial</a>
   
     <!-- ############################ PARTE 18: Text- Tranform ########################### -->
-    <p class="primeiro-maiusculo">abc def ghi</p>
-    <p class="maiussculo">abc def ghi</p>
-    <p class="minusculo">abc def ghi</p>
-
+    <P class="primeiro-maiusculo">abc def ghi</p>
+    <P class="maiussculo">abc def ghi</p>
+    <P class="minusculo">abc def ghi</p>
 </body>
 </html>
