--- a/tags3.html
+++ b/tags3.html
@@ -34,5 +34,11 @@
     <P class="primeiro-maiusculo">abc def ghi</p>
     <P class="maiussculo">abc def ghi</p>
     <P class="minusculo">abc def ghi</p>
-</body>
+
+    <!-- ############################ PARTE 19: Vertical-Align ########################### -->
+    <p>Exemplo de um <span class="super">Texto com valor super</span>aplicado.</p>
+    <p>Exemplo de um <span class="porcentagem</span>aplicado.</p>   
+    <p>Exemplo de um <span class="medida">Texto com valor de medida</span>aplicado.</p>
+    
+    </body>
 </html>
