--- a/tags4.html
+++ b/tags4.html
@@ -64,9 +64,12 @@
       <li>Item 03</li> 
       </ol>
 
-
-
-
+      <!-- ########################################### PARTE 25: Menus ####################################### -->
+      <ul id="menu">
+      <li>a href="index.html" title="Home</a></li>
+      <li><a href="pagina.html" title="Pagina 2">Página 02</a></li>
+      <li><a href="pagina1.html" title="Pagina 3">Página 03</a></li>
+      </ul>
 
 
 </body>
