--- a/tags4.html
+++ b/tags4.html
@@ -67,8 +67,8 @@
       <!-- ########################################### PARTE 25: Menus ####################################### -->
       <ul id="menu">
       <li>a href="index.html" title="Home</a></li>
-      <li><a href="pagina.html" title="Pagina 2">Página 02</a></li>
-      <li><a href="pagina1.html" title="Pagina 3">Página 03</a></li>
+      <li><a href="tags.html" title="Pagina 2">Página 02</a></li>
+      <li><a href="tag1.html" title="Pagina 3">Página 03</a></li>
       </ul>
 
 
