--- a/_EXEMPLOS2/tabelas.html
+++ b/_EXEMPLOS2/tabelas.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EFEITOS EM LINKS</title>
+    <link type="text/css" rel="styesheet" href="modelo.css" />
 </head>
 <body>
-    
+    <a href="https://www.uol.com.br" title="Link Não Visitado">Link não visitado</a>
+    <a href="https://duckuckgo.com" title="Link Visitado">Link Visitado</a>
 </body>
 </html>
