--- a/index.html
+++ b/index.html
@@ -114,7 +114,80 @@ para a estilização e formatação deste documento HTML. -->
              <div class="destaque_top_direita_dividido">
              <h1>Qual a diferença entre pseudo classes e pseudo elementos.</h1>
                 
-             
+             <p>
+                Ao utilizar ou pesquisar por CSS pseudo-elementos, você pode ter encontrado sintaxe diferente para :before ou ::before, especificamente na forma de dois-pontos duplo, em vez dos dois pontos tradicionais único. Isto parece um pouco confuso no início, mas há realmente uma explicação bastante simples.
+             </p>
+             </div>
+        </div>
+    </div>
+</div>
+<div id="destaques_bottom"
+      <div id="destaques_bottom_esquerda"
+      <h1> Manipulando o DOM utiliazndo o método Jquery <code> .clone()</code> </h1>
+      <p>
+      </div>
+      <div id="destaques_bottom_direita"> 
+        <img src="img/conheca_os_cursos_cpr.jpg" title="Conheça os CURSOS CPT" alt="Conheçaos CURSOS CPT"/>
+        <h1> Conheça os CURSOS </h1> 
+      </div>
+    </div>    
+ </div>
+ <?
+}else{
+    include($pag.".html");
+}?>
+</div>
+<div id="rodape"> 
+    <div id="navegacao">
+<div class="rodape_navegacao_itens">
+    <h1>
+        &lt;html&gt; 
+    </h1>
+</ul>
+         <li><a href="index.php?pag=html-e-o-novo-html"> HTML é o novo HTML5</a></li>
+         <li> Tags e elementos </li>
+         <li> Quando usar os elementos </li>
+         <li> HTML "b" e "strong" </li>
+         <li> O HTML em dia-a-dia </li>
+    </ul>
+</div>
+<div class="rodape_navegacao_itens">
+    <h1> &lt;style&gt;</h1>
+    <ul>
+        <li> Qual a diferença entre pseudo-classes e pseudo-elementos </li>
+    </ul>
+</div>
+<div class="rodape_navegacao_itens"
+<h1>&lt;script&gt;</h1>
+<ul>
+      <li> Browser Object Model --BOM </li>
+      <li>Como funciona a função eva do JavaScript </li>
+      <li> Manipulando o DOM utilizando o método jQuery .clone()</li>
+      <li> Acessando todos os cabeçalhos de um documento HTML </li>
+      <li> utilizando jQuery </li>
+      <li> Colorindo linhas especificas de uma tabela HTML com a ajuda do jQuery </li>
+      <li> Palavras Reservadas do JavaScript </li>
+    </ul>
+</div>
+<div class="rodape_navegacao_itens">
+    <h1> Acessibilidade Usabilidade SEO </h1>
+    <ul> 
+                <li> Primeiros Passos no Ambiente INTERNET </li>
+                <li> Estatísticas dos usuários de browser segundo a w3Schools </li>
+            </ul>
+        </div>
+    </div>
+</div
+<div id="direitos_reservados">
+</hr>
+</div>
+ 2021-2023. Todos Os Direitos São Reservados.
+    </div>
+</div>
+</body>
+</html>
+
+</html> 
              <hr/>CLIENTSIDE.COM.BR @2011-2011. Todos os direitos reservados.                    
              <!-- Definição da div com id=geral, que vai definir a      estrutura
              geral do Site. -->
