--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 				<div id="menu">
 					<ul>
 						<li><a href="/clientside/index.php">Home</a></li>
-						<li>HTML</li>
-						<li>CSS</li>
-						<li>JavaScript</li>
-						<li>jQuery</li>
-						<li>Acessibilidade</li>
-						<li>Usabilidade</li>
+						<li>modelos da volkswagen</li>
+						<li>Jetta</li>
+						<li>Gol</li>
+						<li>Tiguan</li>
+						<li>Nivus</li>
+						<li>Amarok</li>
 						<li><a href="index.php?pag=fale-conosco">Contato</a></li>
 					</ul>
 				</div>
