--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
 				<div id="destaques">
 					<div id="destaques_top">
 						<div id="destaque_top_esquerda">
-							<h1>HTML é o novo HTML5</h1>
+							<h1>Carros da volkswagen</h1>
 							<p>
-							Em 2009, a WHATWG anunciou que a especificação do HTML5 estava em
-							processo para a última chamada. O plano nesta ocasião era      de
-							finalizar a especificação e publicar o HTML 5 em 2012.
-							Entretanto, a WHATWG percebeu que o HTML 4.01 ainda está       em
-							alta no mercado e há por grande parte dos desenvolvedores uma boa
-							demanda por novos recursos para o HTML.
+							A história da Volkswagen teve início na década de 1930, na Alemanha Nazista,
+							com a construção do consagrado Fusca e o objetivo de produzir carros populares,
+							como indica seu nome. Com presença em 153 países, hoje a companhia é uma das maiores fabricantes de automóveis do mundo.
 						    </p>
 							
 							<img src="img/html-e-o-novo-html5.jpg" title="HTML é o novo HTML5" alt="HTML é o novo HTML5" />
