--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<div id="destaque_top_direita">
 							<h1>Conheça o  CPT</h1>
 							<iframe title="YouTube video player" width="380" height="320" 
-							src="http://www.youtube.com/embed/3zVuBNfLCAg" frameborder="0" 
+							src="https://youtu.be/gMkEH3PnKcU?si=g-AD2MJM9f4C08iD" frameborder="0" 
 							allowfullscreen></iframe> <span class="legenda">Cursos CPT: Um
 							facilitador para a sua capacitação profissional. Clique   aqui
 							para saber mais detalhes.</span>
