--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div id="menu">
 					<ul>
 						<li><a href="/clientside/index.php">Home</a></li>
-						<li>modelos da volkswagen</li>
+						<li>VOLKSWAGEM</li>
 						<li>Jetta</li>
 						<li>Gol</li>
 						<li>Tiguan</li>
