--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							
 							<div  id="destuqe_top_direita_especial">
 								<div class="destaque_top_direita_dividido">
-									<h1>Palavras Reservadas do JavaScript</h1>
+									<h1>JETTA 2023</h1>
 									
 									<p>
 									Não é permitido, criar variáveis com nomes de palavras
