--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
 							
 							<div  id="destuqe_top_direita_especial">
 								<div class="destaque_top_direita_dividido">
-									<h1>JETTA 2023</h1>
+									<h1>JETTA GLI 2023</h1>
 									
-									<p>
-									Não é permitido, criar variáveis com nomes de palavras
-									reservadas da Linguagem de Programação JavaScript. Veja
-									uma lista com todas estas palavras reservadas.</p>
+									<p>O Jetta GLI é o sedã médio mais esportivo da categoria.
+									 Com motor 350 TSI de 231 cv e câmbio automático DSG de 7 velocidades.
+									 Grade dianteira com acabamento em preto brilhante,
+									 rodas de liga leve de 18 polegadas e saias laterais. 
+							        </p>
 								</div>
 								<div class="destaque_top_direita_dividido">
 
