--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							como indica seu nome. Com presença em 153 países, hoje a companhia é uma das maiores fabricantes de automóveis do mundo.
 						    </p>
 							
-							<img src="img/html-e-o-novo-html5.jpg" title="HTML é o novo HTML5" alt="HTML é o novo HTML5" />
+							<img src="img/amarok.png" title="AMAROK" alt="AMAROK v6" />
 							
 							<h1>AMAROK</h1>
 							<p>Motor V6 3.0 TDI com 258 cv
