--- a/index.html
+++ b/index.html
@@ -68,11 +68,7 @@
 						
 						<div id="destaque_top_direita">
 							<h1>Conheça o  CPT</h1>
-							<iframe title="YouTube video player" width="380" height="320" 
-							src="https://youtu.be/gMkEH3PnKcU?si=g-AD2MJM9f4C08iD" frameborder="0" 
-							allowfullscreen></iframe> <span class="legenda">Cursos CPT: Um
-							facilitador para a sua capacitação profissional. Clique   aqui
-							para saber mais detalhes.</span>
+							<iframe <iframe width="560" height="315" src="https://www.youtube.com/embed/hVZhnO_PxOc?si=Pd9rI6MtbEk-nMHR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>.</span>
 							
 							<div  id="destuqe_top_direita_especial">
 								<div class="destaque_top_direita_dividido">
