--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							como indica seu nome. Com presença em 153 países, hoje a companhia é uma das maiores fabricantes de automóveis do mundo.
 						    </p>
 							
-                         <iframe width="350" height="320" <img src="img/amarok.png"/>
+							<img src="img/amarok.png"/> <iframe width="340" height="320"/>
 							
 							<h1>AMAROK</h1>
 							<p>Motor V6 3.0 TDI com 258 cv
