--- a/index.html
+++ b/index.html
@@ -96,28 +96,14 @@
 							</div>
 						</div>
 					</div>
-					<div id="destaques_bottom">
-						<div id="destaque_bottom_esquerda">
-							<h1>Manipulando o DOM utilizando o método jQuery <code>.clone()</code></h1>
-							<p>
-							O <code>.clone()</code> é um método que executa uma      cópia
-							profunda do conjunto de elementos HTML determinado,      o que
-							significa que ele copia os elementos indicados e todos      os
-							elementos de seus descendentes e nós de texto.
-						    </p>
-						</div>
-					</div>
-				</div>
-				<?
-				}else{
-					include($pag.".html");
-				}?>
 			</div>
 			<div id="rodape">
 				<div id="navegacao">
 					<div class="rodape_navegacao_itens">
 						<h1>&lt;html&gt;</h1>
 						<ul>
+							<li><a href="index.php?pag=html-e-o-novo-html">HTML é o novo HTML5</a></li>
+							<li>Tags e elementos</li>
 							<li><a href="index.php?pag=html-e-o-novo-html">HTML é o novo HTML5</a></li>
 							<li>Tags e elementos</li>
 							<li>Quando usar os elementos</li>
