--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 				<div id="menu">
 					<ul>
-						<li><a href="/clientside/index.php">Home</a></li>
+						<li><a href="/amarok/index.php">Home</a></li>
 						<li>VOLKSWAGEM</li>
 						<li>Jetta</li>
 						<li>Gol</li>
