--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-		<title>Client-Side: HTML5, CSS3, JavaScript | Desenvolvimento WEB: Conhecimento sem limite.</title>
+		<title>AMAROK.</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="content-language" content="pt" />
 		<meta name="description" content="No site Client-Side você vai encontrar artigos referentes ao 
