--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
 				<div id="menu">
 					<ul>
 						<li><a href="/amarok/index.php">Home</a></li>
-						<li>VOLKSWAGEM</li>
-						<li>Jetta</li>
-						<li>Gol</li>
-						<li>Tiguan</li>
-						<li>Nivus</li>
-						<li>Amarok</li>
+						<li>MOTOR</li>
+						<li>CAMBIO</li>
+						<li>RODA</li>
+						<li>SUSPENÇÃO</li>
 					</ul>
 				</div>
 			</div>
@@ -35,14 +33,14 @@
 				<div id="destaques">
 					<div id="destaques_top">
 						<div id="destaque_top_esquerda">
-							<h1>Carros da volkswagen</h1>
+							<h1>AMAROK</h1>
 							<p>
 							A história da Volkswagen teve início na década de 1930, na Alemanha Nazista,
 							com a construção do consagrado Fusca e o objetivo de produzir carros populares,
 							como indica seu nome. Com presença em 153 países, hoje a companhia é uma das maiores fabricantes de automóveis do mundo.
 						    </p>
 							
-							<iframe width="280" height="250" src="img/amarok.png"/> </iframe>
+							<iframe width="350" height="315" src="img/amarok.png"/> </iframe>
 							
 							<h1>AMAROK</h1>
 							<p>Motor V6 3.0 TDI com 258 cv
