--- a/index.html
+++ b/index.html
@@ -74,13 +74,10 @@
 							
 							<div  id="destuqe_top_direita_especial">
 								<div class="destaque_top_direita_dividido">
-									<h1>JETTA GLI 2023</h1>
+									<h1>AMAROK</h1>
 									
-									<p>O Jetta GLI é o sedã médio mais esportivo da categoria.
-									 Com motor 350 TSI de 231 cv e câmbio automático DSG de 7 velocidades.
-									 Grade dianteira com acabamento em preto brilhante,
-									 rodas de liga leve de 18 polegadas e saias laterais. 
-							        </p>
+									<p>Amarok: potência e desempenho em veículos 4x4. A Amarok, da Volkswagen,
+										 é uma caminhonete robusta e confiável que oferece um desempenho excepcional.</p>  
 								</div>
 								<div class="destaque_top_direita_dividido">
 
