--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<ul>
 							<li>Qual a diferença entre pseudo-classes e pseudo-elementos</li>
 						</ul>
-						<img src="/tmp/guest-dxgx1f/Downloads/2TDS-main/img/golf_gti.png" alt="golf_gti"/>
+						<img src="img/golf_gti.png" alt="golf_gti"/>
 					</div>
 					<div class="rodape_navegacao_itens">
 						<h1>&lt;script&gt;</h1>
