--- a/index.html
+++ b/index.html
@@ -81,15 +81,9 @@
 								</div>
 								<div class="destaque_top_direita_dividido">
 
-									<h1>Qual a diferença entre pseudo classes e pseudo elementos</h1>
+									<h1>GOLF TSI</h1>
 
-									<p>
-									Ao utilizar ou pesquisar por CSS pseudo-elementos, você pode ter
-									encontrado sintaxe diferente para :before ou           ::before,
-									especificamente na forma de dois-pontos duplo, em vez dos   dois
-									pontos tradicionais único. Isto parece um pouco confuso       no
-									início, mas há realmente uma explicação bastante simples.
-								    </p>
+									<p>VW Golf 7 usado ainda é muito bom, mas câmbio DSG dá dor de cabeça.</p>
 								</div>
 							</div>
 						</div>
