--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div id="rodape">
 				<div id="navegacao">
 					<div class="rodape_navegacao_itens">
-						<h1>&lt;html&gt;</h1>
+						<h1>JETTA TSI</h1>
 						<ul>
 							<li><a href="index.php?pag=html-e-o-novo-html">HTML é o novo HTML5</a></li>
 							<li>Tags e elementos</li>
@@ -123,7 +123,7 @@
 						</ul>
 					</div>
 					<div class="rodape_navegacao_itens">
-						<h1>Acessibilidade Usabilidade SEO</h1>
+						<h1>GOL</h1>
 						<ul>
 							<li>Primeiros Passos no Ambiente INTERNET</li>
 							<li>Estatísticas dos usuários de browser segundo a w3Schools</li>
