--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<div class="rodape_navegacao_itens">
 						<h1>GOL</h1>
 						<ul>
-							<li>Primeiros Passos no Ambiente INTERNET</li>
+							<li>motor 1.6</li>
 							<li>Estatísticas dos usuários de browser segundo a w3Schools</li>
 						</ul>
 					</div>
