--- a/index.html
+++ b/index.html
@@ -111,15 +111,11 @@
 					</div>
 					<img src="img/golf_gti.png" alt="golf_gti"/>
 					<div class="rodape_navegacao_itens">
-						<h1>&lt;script&gt;</h1>
+						<h1>golf gti;</h1>
 						<ul>
-							<li>Browser Object Model – BOM</li>
-							<li>Como funciona a função eval do JavaScript</li>
-							<li>Manipulando o DOM utilizando o método jQuery .clone()</li>
-							<li>Acessando todos os cabeçalhos de um documento HTML</li>
-							<li>utilizando jQuery</li>
-							<li>Colorindo linhas específicas de uma tabela HTML com a ajuda do jQuery</li>
-							<li>Palavras Reservadas do JavaScript</li>
+							<li>motor 2.0 turbo</li>
+							<li>exlente carro</li>
+							<li>400 cavlo</li>	
 						</ul>
 					</div>
 					<div class="rodape_navegacao_itens">
