--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<ul>
 							<li>motor 2.0 turbo</li>
 							<li>exlente carro</li>
-							<li>400 cavlo</li>	
+							<li>400 cavalo de roda</li>	
 						</ul>
 					</div>
 					<div class="rodape_navegacao_itens">
