--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 						<h1>GOL</h1>
 						<ul>
 							<li>motor 1.6</li>
-							<li>Estatísticas dos usuários de browser segundo a w3Schools</li>
+							<li>muito econômico<li>
+							<li>ótimo carro</li>	
 						</ul>
 					</div>
 				</div>
