--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 						</ul>
 					</div>
 					<div class="rodape_navegacao_itens">
-						<h1>&lt;style&gt;</h1>
+						<h1>AMAROK</h1>
 						<ul>
-							<li>Qual a diferença entre pseudo-classes e pseudo-elementos</li>
+							<li>ÓTIMO CARRO</li>
 						</ul>
 					</div>
 					<img src="img/golf_gti.png" alt="golf_gti"/>
