--- a/index.html
+++ b/index.html
@@ -94,13 +94,10 @@
 					<div class="rodape_navegacao_itens">
 						<h1>JETTA TSI</h1>
 						<ul>
-							<li><a href="index.php?pag=html-e-o-novo-html">HTML é o novo HTML5</a></li>
-							<li>Tags e elementos</li>
-							<li><a href="index.php?pag=html-e-o-novo-html">HTML é o novo HTML5</a></li>
-							<li>Tags e elementos</li>
-							<li>Quando usar os elementos</li>
-							<li>HTML "b" e "strong"</li>
-							<li>O HTML em seu dia-a-dia</li>
+							<li><ÓTIMA PERFOMACE</a></li>
+							<li>320 CAVALO</li>
+							<li><CARRO MUITO BOM</a></li>
+							<li>SUSPENÇÃO BOA</li>
 						</ul>
 					</div>
 					<div class="rodape_navegacao_itens">
