--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 				<div id="navegacao">
 					<div class="rodape_navegacao_itens">
 						<h1>JETTA TSI</h1>
-						<ul>
 							<li><ÓTIMA PERFOMACE</a></li>
 							<li>320 CAVALO</li>
 							<li><CARRO MUITO BOM</a></li>
@@ -102,14 +101,14 @@
 					</div>
 					<div class="rodape_navegacao_itens">
 						<h1>AMAROK</h1>
-						<ul>
 							<li>ÓTIMO CARRO</li>
+							<li>4x4</li>
+							<li>muito bom para terra</li>
 						</ul>
 					</div>
 					<img src="img/golf_gti.png" alt="golf_gti"/>
 					<div class="rodape_navegacao_itens">
 						<h1>golf gti;</h1>
-						<ul>
 							<li>motor 2.0 turbo</li>
 							<li>exlente carro</li>
 							<li>400 cavalo de roda</li>	
