--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							 à tração integral presente na maioria das versões.
 							</p>
 							
-							<pre>golf gti</pre>
+							<pre>GOLF GTI</pre>
 							
 							<p>Equipado com um motor turbo de quatro cilindros 2.0,
 								 o Golf GTI Autobahn oferece 244 cv de potência e 37,7 kgfm de torque, 
@@ -108,7 +108,7 @@
 					</div>
 					<img src="img/golf_gti.png" alt="golf_gti"/>
 					<div class="rodape_navegacao_itens">
-						<h1>golf gti;</h1>
+						<h1>GOLF GTI</h1>
 							<li>motor 2.0 turbo</li>
 							<li>exlente carro</li>
 							<li>400 cavalo de roda</li>	
